<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="network_error">网络连接错误,请稍后再试</string>
    <string name="network_conn_error">网络连接错误,请检查网络连接</string>
    <string name="server_error">内部错误,请稍后再试</string>
    <string name="bind_server_error">手环数据异常，请联系管理员</string>
    <string name="loading_data">正在加载中...</string>
    <string name="nick_name_nonull">您没有输入昵称,请重新输入</string>
    <string name="nick_name_error">您的昵称长度小于两位了,请重新输入</string>
    <string name="token_error">您的账户在异地登录或已被停用</string>
    <string name="email_format_error">您输入的邮箱格式有误</string>
    <string name="mobile_format_error">您输入的手机号格式有误</string>
    <string name="job_number_error">工号应不小于三位，请检查</string>
    <string name="password_length_error">请输入6位到12位的字母或数字</string>
    <string name="password_equals_error">您两次密码输入不一致，请检查</string>
    <string name="password_error">密码输入有误，请检查密码</string>
    <string name="relateworknumber_prompt">提示：员工号关联成功后，可使用员工号登录</string>
    <string name="disscuss_null">请输入评论内容</string>
    <string name="dev_ing">此功能正在开发中,敬请期待</string>
    <string name="btn_yes">确&#160;&#160;&#160;定</string>
    <string name="app_name">上班趣</string>
    <string name="atv_parameter">activity参数异常,请检查</string>
    <string name="action_settings">Settings</string>
    <string name="home_suggest">头条</string>
    <string name="add_topic">创建小组</string>
    <string name="topic_hint">请输入您想发布的小组1-10个字</string>
    <string name="create_hint">本周已创建小组，不能重复创建</string>
    <string name="home_around">身边</string>
    <string name="home_walk">健步</string>
    <string name="home_find">发现</string>
    <string name="home_mine">我的</string>
    <string name="share">分享</string>
    <string name="walk">健步</string>
    <string name="sleep">睡 眠</string>
    <string name="currank">昨日排行</string>
    <string name="login_input_hint">手机号/邮箱/工号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_input_invite">邀请码</string>
    <string name="login_input_invite_userphone">用户手机号</string>
    <string name="login_input_invite_str">您的邀请码</string>
    <string name="regist_num">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="common_login">登录</string>
    <string name="common_invite">立即邀请</string>
    <string name="common_register">注册</string>
    <string name="loading">加载中</string>
    <string name="login_suc">登录成功</string>
    <string name="switch_on">开</string>
    <string name="switch_off">关</string>
    <string name="tips_input_name">帐号不能为空</string>
    <string name="tips_input_null_phone">手机号不能为空</string>
    <string name="tips_input_null_invitecode">邀请码不能为空</string>
    <string name="tips_input_pwd">密码不能为空</string>
    <string name="login_invalid_input_tel">输入的帐号无效，请输入固定电话号码</string>
    <string name="login_invalid_input">输入的帐号无效，请输入手机号码</string>
    <string name="tips_invalid_pwd">密码输入不正确，请输入6&#8211;16位数字、字母.</string>
    <string name="tips_input_null_check_code">请输入验证码</string>
    <string name="tips_input_null_pwd">请输入密码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="reget_check_code">重新发送</string>
    <string name="regist_input_phone">手机号</string>
    <string name="regist_input_age">年龄</string>
    <string name="regist_input_check_code">验证码</string>
    <string name="regist_input_invite_code">邀请码</string>
    <string name="regist_input_pwd">密码(6&#8211;16位数字、字母)</string>
    <string name="input_new_pwd">设置新密码</string>
    <string name="next">下一步</string>
    <string name="commit">提交</string>
    <string name="finish">完成</string>
    <string name="regist_input_name">姓名</string>
    <string name="service_name">Dcare服务</string>
    <string name="activity_today_steps">今日步数</string>
    <string name="attationed">已关注</string>
    <string name="notattationed">未关注</string>
    <string name="attention">关注</string>
    <string name="locationDialog_tips">未获取到位置，请稍后重试</string>
    <string name="cancel">取消</string>
    <string name="update_must">您的版本需更新过才能使用</string>
    <string name="update_ok">立即更新</string>
    <string name="update_title">版本更新</string>
    <string name="update_later">暂不更新</string>
    <string name="update_now">现在更新</string>
    <string name="alreadyLastest">已经是最新版本</string>
    <string name="empty_myexchange">暂时没有兑换任何商品\n&#10;赶紧去【<font color="#FF0000">兑换</font>】吧！</string>
    <string name="activity_info_person_nick">&lt;font color=\"#FFFFFF\">%1$s&lt;/font> &lt;font color=\"#62ac3c\">发起了&lt;/font>&lt;font color=\"#FFFFFF\">%2$s&lt;/font>&lt;font color=\"#62ac3c\">活动&lt;/font></string>
    <string name="people_data">个人资料</string>
    <!-- Export Email Strings -->
    <string name="exporter_email_device_list_subject">Bluetooth LE Scan Results (%s)</string>
    <string name="exporter_email_device_services_subject" formatted="false">Bluetooth LE Device GATT Results (%s, %s)</string>
    <string name="exporter_email_device_list_body">Please find attached the scan results.</string>
    <string name="exporter_email_device_list_picker_text">Please select your email client:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="invalid_device_data">Invalid Device Data!</string>
    <string name="no_data">No data</string>
    <string name="not_supported">Not supported</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="supported">Supported</string>
    <string name="unknown">unknown</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>
    <string name="no_known_services">No known services</string>
    <string name="no_welfare">暂无数据</string>
    <string name="weight">体重:</string>
    <string name="age">出生年:</string>
    <string name="height">身高:</string>
    <string name="cancle">取消</string>
    <string name="sure">完成</string>
    <string name="chooseage">选择年龄</string>
    <string name="chooseweight">选择体重</string>
    <string name="chooseheight">选择身高</string>
    <string name="sharetogroup">分享到小组</string>
    <string name="growingio_project_id">909770084d83382d</string>
    <string name="growingio_url_scheme">growing.b95538ffc8e73082</string>

</resources>