<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.etcomm.dcare.widget.SimpleTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_alert_title" >
    </com.etcomm.dcare.widget.SimpleTitleBar>

    <ImageView
        android:id="@+id/iv_avator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/avator_nv_1" />

    <LinearLayout
        android:id="@+id/ll_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:text="50"
            android:textColor="#f37f32"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            android:textSize="10sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dp"
            android:text="160"
            android:textColor="#f37f32"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cm"
            android:textSize="10sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:text="1980"
            android:textColor="#f37f32"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="年"
            android:textSize="10sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_next"
        style="@style/common_btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginhuge"
        android:background="@drawable/btn_common_bg"
        android:text="@string/next" />

    <LinearLayout
        android:id="@+id/layout_wl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#e2e1e1" >

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/cancel"
                android:textColor="#f34c35" />

            <TextView
                android:id="@+id/choosetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/chooseage"
                android:textColor="#282828" />

            <TextView
                android:id="@+id/sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/sure"
                android:textColor="#f34c35" />
        </RelativeLayout>

        <com.etcomm.dcare.app.widget.WheelView
            android:id="@+id/wl_pickerage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center" />

        <com.etcomm.dcare.app.widget.WheelView
            android:id="@+id/wl_pickerweight"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center" />

        <com.etcomm.dcare.app.widget.WheelView
            android:id="@+id/wl_pickerheight"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>