<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <Button
        android:id="@+id/btn_register"
        style="@style/common_btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:text="@string/regist_num"
        android:textColor="#fac158"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ll_user_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_photo_height"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:orientation="vertical" >

            <com.etcomm.dcare.widget.CircleImageView
                android:id="@+id/iv_photo_default"
                android:layout_width="@dimen/login_photo_width"
                android:layout_height="@dimen/login_photo_height"
                android:layout_centerInParent="true"
                android:src="@drawable/login_default_3" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginhuge"
            android:orientation="horizontal" >

            <com.etcomm.dcare.widget.ExEditText
                android:id="@+id/et_username"
                style="@style/common_edit_style"
                android:layout_height="35dp"
                android:layout_marginLeft="@dimen/marginhuge"
                android:layout_marginRight="@dimen/marginhuge"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/username_left_icon"
                android:drawablePadding="@dimen/marginmiddle"
                android:hint="@string/login_input_hint"
                android:inputType="text"
                android:letterSpacing="0.05"
                android:paddingBottom="0dp"
                android:paddingLeft="@dimen/marginmiddle"
                android:textColor="@color/hint_color"
                android:textColorHint="#f4cab6"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <ImageView
                android:id="@+id/iv_del_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5.16"
                android:padding="10dp"
                android:src="@drawable/nickname_delete"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#fac158" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginlarge"
            android:orientation="horizontal" >

            <com.etcomm.dcare.widget.ExEditText
                android:id="@+id/et_passWord"
                style="@style/common_edit_style"
                android:layout_height="35dp"
                android:layout_below="@id/et_username"
                android:layout_marginLeft="@dimen/marginhuge"
                android:layout_marginRight="@dimen/marginhuge"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/password_left_icon"
                android:drawablePadding="@dimen/marginmiddle"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:letterSpacing="0.05"
                android:paddingLeft="@dimen/marginmiddle"
                android:textColor="@color/hint_color"
                android:textColorHint="#f4cab6"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <ImageView
                android:id="@+id/iv_del_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5.16"
                android:padding="10dp"
                android:src="@drawable/nickname_delete"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#fac158" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_container"
        android:layout_marginRight="15dp"
        android:layout_marginTop="@dimen/marginmiddle"
        android:text="@string/forget_pwd"
        android:textColor="#fac158" />

    <Button
        android:id="@+id/bt_login_btn"
        style="@style/common_btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forget_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginhuge"
        android:background="@drawable/btn_common_bg"
        android:enabled="false"
        android:text="@string/common_login" />

    <include
        android:id="@+id/loading_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/loading_view"
        android:visibility="gone" />

</RelativeLayout>